Add buttons to trigger collapsible flexboxes

--- a/pashto/lessons/alphabet/index.html
+++ b/pashto/lessons/alphabet/index.html
@@ -106,9 +106,9 @@
                 <img class="img-thumbnail" src="/assets/filee_ye_isolated.png" alt="filee_ye">
             </div>
 
-            <h1 class="text-center">Initial Form</h1>
+            <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#initial" aria-expanded="false" aria-controls="initial">Initial Form</button>
 
-            <div class="d-flex flex-wrap justify-content-center flex-row-reverse gap-1 mb-5">
+            <div class="d-flex flex-wrap justify-content-center flex-row-reverse gap-1 collapse mb-5" id="initial">
                 <img class="img-thumbnail" src="/assets/alif_initial.png" alt="alif">
                 <img class="img-thumbnail" src="/assets/be_initial.png" alt="be">
                 <img class="img-thumbnail" src="/assets/pe_initial.png" alt="pe">
@@ -151,9 +151,9 @@
                 <img class="img-thumbnail" src="/assets/tsargunda_ye_initial.png" alt="tsargunda_ye">
             </div>
 
-            <h1 class="text-center">Medial Form</h1>
+            <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#medial" aria-expanded="false" aria-controls="medial">Medial Form</button>
 
-            <div class="d-flex flex-wrap justify-content-center flex-row-reverse gap-1 mb-5">
+            <div class="d-flex flex-wrap justify-content-center flex-row-reverse gap-1 collapse mb-5" id="medial">
                 <img class="img-thumbnail" src="/assets/alif_medial.png" alt="alif">
                 <img class="img-thumbnail" src="/assets/be_medial.png" alt="be">
                 <img class="img-thumbnail" src="/assets/pe_medial.png" alt="pe">
@@ -198,9 +198,9 @@
                 <img class="img-thumbnail" src="/assets/oogda_ye_medial.png" alt="oogda_ye">
             </div>
 
-            <h1 class="text-center">Final Form</h1>
+            <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#final" aria-expanded="false" aria-controls="final">Final Form</button>
 
-            <div class="d-flex flex-wrap justify-content-center flex-row-reverse gap-1">
+            <div class="d-flex flex-wrap justify-content-center flex-row-reverse collapse gap-1" id="final">
                 <img class="img-thumbnail" src="/assets/alif_final.png" alt="alif">
                 <img class="img-thumbnail" src="/assets/be_final.png" alt="be">
                 <img class="img-thumbnail" src="/assets/pe_final.png" alt="pe">
