Add buttons to trigger collapsible flexboxes

--- a/pashto/lessons/alphabet/index.html
+++ b/pashto/lessons/alphabet/index.html
@@ -57,9 +57,9 @@
                 <img class="img-thumbnail" src="/assets/alphabet_example.png" alt="Example of how I arranged the letters">
             </div>
 
-            <h1 class="text-center">Isolated Form</h1>
+            <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#initial" aria-expanded="false" aria-controls="initial">Initial Form</button>
 
-            <div>
+            <div class="collapse" id="isolated">
                 <div class="d-flex flex-wrap justify-content-center flex-row-reverse gap-1 mb-5">
                     <img class="img-thumbnail" src="/assets/alif_isolated.png" alt="alif">
                     <img class="img-thumbnail" src="/assets/be_isolated.png" alt="be">
