Add buttons to trigger collapsible flexboxes

--- a/pashto/lessons/alphabet/index.html
+++ b/pashto/lessons/alphabet/index.html
@@ -57,7 +57,7 @@
                 <img class="img-thumbnail" src="/assets/alphabet_example.png" alt="Example of how I arranged the letters">
             </div>
 
-            <button class="btn btn-primary d-block mb-2" type="button" data-bs-toggle="collapse" data-bs-target="#isolated" aria-expanded="false" aria-controls="isolated">Initial Form</button>
+            <button class="btn btn-primary d-block mb-2" type="button" data-bs-toggle="collapse" data-bs-target="#isolated" aria-expanded="false" aria-controls="isolated">Isolated Form</button>
 
             <div class="collapse" id="isolated">
                 <div class="d-flex flex-wrap justify-content-center flex-row-reverse gap-1 mb-5">
