Add lesson on forming words (incomplete)

--- a/pashto/lessons/forming-words/index.html
+++ b/pashto/lessons/forming-words/index.html
@@ -49,29 +49,28 @@
                 they are located in a certain word.
             </p>
 
-            <h2>The Pashto Diacritics</h2>
+            <h2>How Do Words Form?</h2>
 
-            <p>Below are the diacritics of Pashto. Since Pashto is written from 
-                right to left, I have similarly arranged the diacritics from right to left below. The colored image shows
-                how I have labeled the letters.
+            <p>Basically, letters are joined and connected together to form different words. The way that these letters appear
+                in these words depends on where they are located within the words.
             </p>
 
-            <img class="img-thumbnail" src="/assets/diacritic_example.png" alt="Example of how I arranged the diacritics">
+            <ul>
+                <li>If a letter appears at the start of a word, it will take on its initial form.</li>
+                <li>If a letter appears in the middle of a word, it will take on its medial form.</li>
+                <li>If a letter appears at the end of a word, it will take on its final form.</li>
+            </ul>
 
-            <div class="d-flex flex-wrap justify-content-end flex-row-reverse gap-1 my-3">
-                <img class="img-thumbnail" src="/assets/zwar.png" alt="zwar">
-                <img class="img-thumbnail" src="/assets/zwarakay.png" alt="zwarakay">
-                <img class="img-thumbnail" src="/assets/zer.png" alt="zer">
-                <img class="img-thumbnail" src="/assets/pex.png" alt="pex">
-            </div>
-
-            <h2>How Do They Work?</h2>
-
-            <p>These diacritics are basically placed on letters in different ways to show their pronunciations. In the images,
-                the dotted circles are where letters would be placed for each diacritic. To pronounce a letter with a diacritic,
-                the sound of the letter itself is pronounced first, and then the diacritic's sound follows shortly after. (If you
-                are unfamiliar with the alphabets and their sounds, I have a <a href="/pashto/lessons/alphabet/">lesson</a> on that.)
+            <p>Furthermore, letters typically have understood diacritics on them. However, these diacritics are usually not
+                written out, often only showing themselves in dictionaries to help readers achieve the correct pronunciation.
+                For the most part, diacritics are meant to be understood by the reader without being explicitly denoted. Below
+                is an example of a full word in Pashto.
             </p>
+
+            <figure>
+                <img src="/assets/pashto.png" alt="The word "Pashto" in the Pashto script">
+                <figcaption class="text-center">The written form of the word "Pashto" in the Pashto language</figcaption>
+            </figure>
 
         </div>
         
