Fix bad caption format (remove centered text)

--- a/pashto/lessons/forming-words/index.html
+++ b/pashto/lessons/forming-words/index.html
@@ -69,7 +69,7 @@
 
             <figure>
                 <img src="/assets/pashto.png" alt="The word "Pashto" in the Pashto script">
-                <figcaption class="text-center">The written form of the word "Pashto" in the Pashto language</figcaption>
+                <figcaption>The written form of the word "Pashto" in the Pashto language</figcaption>
             </figure>
 
         </div>
