Add the lesson on forming words to the main lesson page

--- a/pashto/lessons/forming-words/index.html
+++ b/pashto/lessons/forming-words/index.html
@@ -67,7 +67,7 @@
                 is an example of a full word in Pashto.
             </p>
 
-            <figure>
+            <figure class="text-center">
                 <img src="/assets/pashto.png" alt="The word "Pashto" in the Pashto script">
                 <figcaption>The written form of the word "Pashto" in the Pashto language</figcaption>
             </figure>
