--- a/pashto/lessons/index.html
+++ b/pashto/lessons/index.html
@@ -47,6 +47,7 @@
 
             <h2><a href="alphabet/">The Alphabet</a></h2>
             <h2><a href="diacritics/">Diacritics</a></h2>
+            <h2><a href="forming-words/">Forming Words</a></h2>
         </div>
         
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
