Update lesson on forming words

--- a/pashto/lessons/forming-words/index.html
+++ b/pashto/lessons/forming-words/index.html
@@ -68,8 +68,15 @@
             </p>
 
             <figure class="text-center">
-                <img src="/assets/pashto.png" alt="The word "Pashto" in the Pashto script">
-                <figcaption>The written form of the word "Pashto" in the Pashto language</figcaption>
+                <img src="/assets/pashto.png" alt="The word "Pashto" in the Pashto script (no diacritics)">
+                <figcaption>The written form of the word "Pashto" in the Pashto language (without diacritics)</figcaption>
+            </figure>
+
+            <p>Below is the same word, but this time, the word has been marked with diacritics.</p>
+
+            <figure class="text-center">
+                <img src="/assets/pashto_with_diacritics.png" alt="The word "Pashto" in the Pashto script (diacritics)">
+                <figcaption>The written form of the word "Pashto" in the Pashto language (with diacritics)</figcaption>
             </figure>
 
         </div>
