Update lesson on forming words

--- a/pashto/lessons/forming-words/index.html
+++ b/pashto/lessons/forming-words/index.html
@@ -79,6 +79,43 @@
                 <figcaption>The written form of the word "Pashto" in the Pashto language (with diacritics)</figcaption>
             </figure>
 
+            <h2>Pronouncing These Words</h2>
+
+            <p>We have formed a word. Now, how do we pronounce it?</p>
+
+            <p>As I mentioned in my <a href="/pashto/lessons/diacritics/">lesson on diacritics</a>, pronouncing
+                a letter with a diacritic takes two steps.</p>
+
+            <ol>
+                <li>The sound of just the letter is pronounced.</li>
+                <li>Then, pronounce the diacritic shortly after that.</li>
+            </ol>
+
+            <p>The same process is relevant for pronouncing full words. Take a look at the word "Pashto" again.
+                The letter <i>pe</i> has a <i>zwarakay</i> diacritic over it, so that first part of the word
+                reads <b>[pə]</b> (the IPA pronunciation).</p>
+            </p>
+
+            <p>If a letter has no diacritic over it even when other letters have them, it will typically
+                be pronounced without any sort of diacritic modifier. Since there is no diacritic over the <i>xīn</i>,
+                the letter <i>xīn</i> reads as one of <b>[ʂ/ʃ/ç/x]</b>. (The sound you choose comes down to your dialect.)
+            </p>
+
+            <p>The letter <i>te</i> features a <i>pex</i> diacritic, suggesting that it could either be pronounced
+                as [t̪u] or [t̪o]. Unfortunately, it may be a bit difficult to know the correct option unless you have
+                already been told it. In a dictionary with English and Pashto, a solution might be to transliterate
+                the word into English and emphasize the correct pronunciation: <b>[t̪o]</b>.
+            </p>
+
+            <p>Putting it all together, we have all of the following as acceptable pronunciations of "Pashto":</p>
+
+            <ul>
+                <li><b>[pəʂ't̪o]</b></li>
+                <li><b>[pəʃ't̪o]</b></li>
+                <li><b>[pəç't̪o]</b></li>
+                <li><b>[pəx't̪o]</b></li>
+            </ul>
+
         </div>
         
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
