--- a/pashto/lessons/forming-words/index.html
+++ b/pashto/lessons/forming-words/index.html
@@ -83,7 +83,7 @@
 
             <p>We have formed a word. Now, how do we pronounce it?</p>
 
-            <p>As I mentioned in my <a href="/pashto/lessons/diacritics/">lesson on diacritics</a>, pronouncing
+            <p>As I mentioned in my <a href="/pashto/lessons/diacritics/">lesson</a> on diacritics, pronouncing
                 a letter with a diacritic takes two steps.</p>
 
             <ol>
