--- a/pashto/lessons/forming-words/index.html
+++ b/pashto/lessons/forming-words/index.html
@@ -116,6 +116,10 @@
                 <li><b>[pəx't̪o]</b></li>
             </ul>
 
+            <p>(Note that the syllable stress was not really implied when the word was written. This also typically
+                needs to be specified in some other way or known beforehand.)
+            </p>
+
         </div>
         
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
