--- a/pashto/lessons/forming-sentences/index.html
+++ b/pashto/lessons/forming-sentences/index.html
@@ -4,29 +4,30 @@
     <head>
         <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
 
-        <title>Home</title>
+        <title>Forming Words</title>
 
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Slabo+13px&display=swap">
         <link rel="stylesheet" href="/styles.css">
+
     </head>
 
     <body>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" href="/">Home <span class="visually-hidden">(current)</span></a>
+                <a class="navbar-brand" href="/">Home</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" href="pashto/">Pashto</a>
+                            <a class="nav-link" href="/pashto/">Pashto</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="pashto/lessons/">Lessons</a>
+                            <a class="nav-link active" href="/pashto/lessons/">Lessons <span class="visually-hidden">(current)</span></a>
                         </li>
                     </ul>
                 </div>
@@ -35,14 +36,34 @@
 
         <nav class="ps-3" style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
             <ol class="breadcrumb">
-                <li class="breadcrumb-item active" aria-current="page">Home</li>
+                <li class="breadcrumb-item"><a href="/">Home</a></li>
+                <li class="breadcrumb-item"><a href="/pashto/">Pashto</a></li>
+                <li class="breadcrumb-item"><a href="/pashto/lessons/">Lessons</a></li>
+                <li class="breadcrumb-item active" aria-current="page">Forming Words</li>
             </ol>
         </nav>
 
         <div class="container-fluid">
-            <h1 class="text-center">Home</h1>
+
+            <h1 class="text-center">Forming Sentences</h1>
+
+            <p>Now, we will look at how to form full sentences in Pashto.</p>
+
+            <h2>How Do Sentences Form?</h2>
+
+            <p>Words are separated by spaces. Pashto has the following puncutation marks that are very similar to the
+                ones found in English:
+            </p>
+
+            <div class="d-flex flex-wrap justify-content-end flex-row-reverse gap-1">
+                <img class="img-thumbnail" src="/assets/period.png" alt="Period">
+                <img class="img-thumbnail" src="/assets/question_mark.png" alt="Question mark">
+                <img class="img-thumbnail" src="/assets/exclamation_mark.png" alt="Exclamation mark">
+            </div>
+
         </div>
         
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+        <script src="/scripts.js"></script>
     </body>
 </html>
