--- a/pashto/lessons/forming-sentences/index.html
+++ b/pashto/lessons/forming-sentences/index.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Slabo+13px&display=swap">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Amiri:ital,wght@0,400;0,700;1,400;1,700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" >
         <link rel="stylesheet" href="/styles.css">
 
     </head>
@@ -55,11 +55,27 @@
                 ones found in English:
             </p>
 
-            <div class="d-flex flex-wrap justify-content-end flex-row-reverse gap-1">
+            <div class="d-flex justify-content-end flex-row-reverse gap-1">
                 <img class="img-thumbnail" src="/assets/period.png" alt="Period">
                 <img class="img-thumbnail" src="/assets/question_mark.png" alt="Question mark">
                 <img class="img-thumbnail" src="/assets/exclamation_mark.png" alt="Exclamation mark">
             </div>
+
+            <p>In addition, it is important to remember that Pashto is written from right to left. (The only
+                exception stems from numbers, as they are written from left to right.)
+            </p>
+
+            <h2>Sentence Structure</h2>
+
+            <p>Sentences in Pashto follow the SOV (subject-object-verb) structure. This is different from the
+                familiar SVO (subject-verb-object) structure that English uses.
+            </p>
+
+            <h2>Examples</h2>
+
+            <ul>
+                <li>زه اوبه څښم.</li>
+            </ul>
 
         </div>
         
