Add text class for Pashto text using the Amiri font

--- a/pashto/lessons/forming-sentences/index.html
+++ b/pashto/lessons/forming-sentences/index.html
@@ -74,7 +74,7 @@
             <h2>Examples</h2>
 
             <ul>
-                <li>زه اوبه څښم.</li>
+                <li class="text-pashto">.زه اوبه څښم</li>
             </ul>
 
         </div>
