Add lesson on forming sentences (incomplete)

--- a/pashto/lessons/forming-sentences/index.html
+++ b/pashto/lessons/forming-sentences/index.html
@@ -74,7 +74,8 @@
             <h2>Examples</h2>
 
             <ul>
-                <li class="text-pashto">.زه اوبه څښم</li>
+                <li class="text-pashto fs-3">.زه اوبه څښم - I drink water.</li>
+                <li class="text-pashto fs-3">.ته ۲۶ کتابونه لرې - You have 26 books.</li>
             </ul>
 
         </div>
