Add inline span elements to improve readability

--- a/pashto/lessons/forming-sentences/index.html
+++ b/pashto/lessons/forming-sentences/index.html
@@ -74,8 +74,8 @@
             <h2>Examples</h2>
 
             <ul>
-                <li class="text-pashto fs-3">.زه اوبه څښم - I drink water.</li>
-                <li class="text-pashto fs-3">.ته ۲۶ کتابونه لرې - You have 26 books.</li>
+                <li><span class="text-pashto fs-3">.زه اوبه څښم</span> - I drink water.</li>
+                <li><span class="text-pashto fs-3">.ته ۲۶ کتابونه لرې</span> - You have 26 books.</li>
             </ul>
 
         </div>
