Add inline span elements to improve readability

--- a/pashto/lessons/forming-sentences/index.html
+++ b/pashto/lessons/forming-sentences/index.html
@@ -55,7 +55,7 @@
                 ones found in English:
             </p>
 
-            <div class="d-flex justify-content-end flex-row-reverse gap-1">
+            <div class="d-flex justify-content-end flex-row-reverse gap-1 my-3">
                 <img class="img-thumbnail" src="/assets/period.png" alt="Period">
                 <img class="img-thumbnail" src="/assets/question_mark.png" alt="Question mark">
                 <img class="img-thumbnail" src="/assets/exclamation_mark.png" alt="Exclamation mark">
