Add color coding to distinguish between subjects, objects, and verbs

--- a/pashto/lessons/forming-sentences/index.html
+++ b/pashto/lessons/forming-sentences/index.html
@@ -73,10 +73,33 @@
 
             <h2>Examples</h2>
 
+            <p>Below is the color code that I used.</p>
+
             <ul>
-                <li class="fs-3"><span class="text-pashto">.زه اوبه څښم</span> - I drink water.</li>
-                <li class="fs-3"><span class="text-pashto">.ته ۲۶ کتابونه لرې</span> - You have 26 books.</li>
+                <li class="bs-danger">Subject</li>
+                <li class="bs-success">Object</li>
+                <li class="bs-primary">Verb</li>
             </ul>
+
+            <ul>
+                <li class="fs-3">
+                    <span class="text-pashto">.
+                        <span class="bs-danger">زه</span> <span class="bs-success">اوبه</span> <span class="bs-primary">څښم</span>
+                    </span> - I drink water.
+                </li>
+                <li class="fs-3">
+                    <span class="text-pashto">.
+                        <span class="bs-danger">ته</span> <span class="bs-success">۲۶ کتابونه</span> <span class="bs-primary">لرې</span>
+                    </span> - You have 26 books.
+                </li>
+            </ul>
+
+            <h2>Wait, This Doesn't Look Familiar!</h2>
+
+            <p>Don't worry! These examples were only meant to introduce you to the basic sentence structure of Pashto.
+                You will learn more of these vocabulary words later on. For now, just recognize the SVO structure and
+                how the words work together in the above sentences to make that structure work.
+            </p>
 
         </div>
         
