Add color coding to distinguish between subjects, objects, and verbs

--- a/pashto/lessons/forming-sentences/index.html
+++ b/pashto/lessons/forming-sentences/index.html
@@ -18,7 +18,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-3">
             <div class="container-fluid">
                 <a class="navbar-brand" href="/">Home</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button" data-text-toggle="collapse" data-text-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
@@ -34,7 +34,7 @@
             </div>
         </nav>
 
-        <nav class="ps-3" style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
+        <nav class="ps-3" style="--text-breadcrumb-divider: '>';" aria-label="breadcrumb">
             <ol class="breadcrumb">
                 <li class="breadcrumb-item"><a href="/">Home</a></li>
                 <li class="breadcrumb-item"><a href="/pashto/">Pashto</a></li>
@@ -76,20 +76,20 @@
             <p>Below is the color code that I used.</p>
 
             <ul>
-                <li class="bs-danger">Subject</li>
-                <li class="bs-success">Object</li>
-                <li class="bs-primary">Verb</li>
+                <li class="text-danger">Subject</li>
+                <li class="text-success">Object</li>
+                <li class="text-primary">Verb</li>
             </ul>
 
             <ul>
                 <li class="fs-3">
                     <span class="text-pashto">.
-                        <span class="bs-danger">زه</span> <span class="bs-success">اوبه</span> <span class="bs-primary">څښم</span>
+                        <span class="text-danger">زه</span> <span class="text-success">اوبه</span> <span class="text-primary">څښم</span>
                     </span> - I drink water.
                 </li>
                 <li class="fs-3">
                     <span class="text-pashto">.
-                        <span class="bs-danger">ته</span> <span class="bs-success">۲۶ کتابونه</span> <span class="bs-primary">لرې</span>
+                        <span class="text-danger">ته</span> <span class="text-success">۲۶ کتابونه</span> <span class="text-primary">لرې</span>
                     </span> - You have 26 books.
                 </li>
             </ul>
