Add color coding to distinguish between subjects, objects, and verbs

--- a/pashto/lessons/forming-sentences/index.html
+++ b/pashto/lessons/forming-sentences/index.html
@@ -82,16 +82,15 @@
             </ul>
 
             <ul>
+
                 <li class="fs-3">
-                    <span class="text-pashto">.
-                        <span class="text-danger">زه</span> <span class="text-success">اوبه</span> <span class="text-primary">څښم</span>
-                    </span> - I drink water.
+                    <span class="text-pashto">.<span class="text-danger">زه</span> <span class="text-success">اوبه</span> <span class="text-primary">څښم</span></span> - I drink water.
                 </li>
+
                 <li class="fs-3">
-                    <span class="text-pashto">.
-                        <span class="text-danger">ته</span> <span class="text-success">۲۶ کتابونه</span> <span class="text-primary">لرې</span>
-                    </span> - You have 26 books.
+                    <span class="text-pashto">.<span class="text-danger">ته</span> <span class="text-success">۲۶ کتابونه</span> <span class="text-primary">لرې</span></span> - You have 26 books.
                 </li>
+                
             </ul>
 
             <h2>Wait, This Doesn't Look Familiar!</h2>
