Add color coding to distinguish between subjects, objects, and verbs

--- a/pashto/lessons/forming-sentences/index.html
+++ b/pashto/lessons/forming-sentences/index.html
@@ -84,13 +84,13 @@
             <ul>
 
                 <li class="fs-3">
-                    <span class="text-pashto">.<span class="text-danger">زه</span> <span class="text-success">اوبه</span> <span class="text-primary">څښم</span></span> - I drink water.
+                    <span class="text-pashto">.<span class="text-danger">زه</span> <span class="text-success">اوبه</span> <span class="text-primary">څښم</span></span> - <span class="text-danger">I</span> <span class="text-primary">drink</span> <span class="text-success">water</span>.
                 </li>
 
                 <li class="fs-3">
-                    <span class="text-pashto">.<span class="text-danger">ته</span> <span class="text-success">۲۶ کتابونه</span> <span class="text-primary">لرې</span></span> - You have 26 books.
+                    <span class="text-pashto">.<span class="text-danger">ته</span> <span class="text-success">۲۶ کتابونه</span> <span class="text-primary">لرې</span></span> - <span class="text-danger">You</span> <span class="text-primary">have</span> <span class="text-success">26 books</span>.
                 </li>
-                
+
             </ul>
 
             <h2>Wait, This Doesn't Look Familiar!</h2>
