--- a/pashto/lessons/forming-sentences/index.html
+++ b/pashto/lessons/forming-sentences/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
 
-        <title>Forming Words</title>
+        <title>Forming Sentences</title>
 
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -39,7 +39,7 @@
                 <li class="breadcrumb-item"><a href="/">Home</a></li>
                 <li class="breadcrumb-item"><a href="/pashto/">Pashto</a></li>
                 <li class="breadcrumb-item"><a href="/pashto/lessons/">Lessons</a></li>
-                <li class="breadcrumb-item active" aria-current="page">Forming Words</li>
+                <li class="breadcrumb-item active" aria-current="page">Forming Sentences</li>
             </ol>
         </nav>
 
