Fix bad breadcrumb divider

--- a/pashto/lessons/forming-sentences/index.html
+++ b/pashto/lessons/forming-sentences/index.html
@@ -34,7 +34,7 @@
             </div>
         </nav>
 
-        <nav class="ps-3" style="--text-breadcrumb-divider: '>';" aria-label="breadcrumb">
+        <nav class="ps-3" style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
             <ol class="breadcrumb">
                 <li class="breadcrumb-item"><a href="/">Home</a></li>
                 <li class="breadcrumb-item"><a href="/pashto/">Pashto</a></li>
