Add section on forming interrogative sentences

--- a/pashto/lessons/forming-sentences/index.html
+++ b/pashto/lessons/forming-sentences/index.html
@@ -100,6 +100,29 @@
                 how the words work together in the above sentences to make that structure work.
             </p>
 
+            <h2>Interrogative Sentences</h2>
+
+            <p>In Pashto, interrogative sentences generally follow the same word order as other sentences in Pashto: SOV.
+                Here are some common question words in Pashto:
+            </p>
+
+                <ul class="fs-3">
+                    <li>څنګه؟ - How?</li>
+                    <li>څوک؟ - Who?</li>
+                    <li>څه؟ - What?</li>
+                    <li>ولې؟ - Why?</li>
+                    <li>چېرته؟ - Where?</li>
+                    <li>کله؟ - When?</li>
+                </ul>
+
+                <p>Generally, the following rules apply when forming interrogative sentences in Pashto:</p>
+
+                <ul>
+                    <li>If there is a subject, put it first before other words. The question word will follow the subject.</li>
+                    <li>If the subject is the question word itself, it should still be first in the sentence.</li>
+                    <li>If the subject is omitted, the question word will be first.</li>
+                </ul>
+
         </div>
         
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
