Add section on forming interrogative sentences

--- a/pashto/lessons/forming-sentences/index.html
+++ b/pashto/lessons/forming-sentences/index.html
@@ -81,13 +81,13 @@
                 <li class="text-primary">Verb</li>
             </ul>
 
-            <ul>
+            <ul class="fs-3">
 
-                <li class="fs-3">
+                <li>
                     <span class="text-pashto">.<span class="text-danger">زه</span> <span class="text-success">اوبه</span> <span class="text-primary">څښم</span></span> - <span class="text-danger">I</span> <span class="text-primary">drink</span> <span class="text-success">water</span>.
                 </li>
 
-                <li class="fs-3">
+                <li>
                     <span class="text-pashto">.<span class="text-danger">ته</span> <span class="text-success">۲۶ کتابونه</span> <span class="text-primary">لرې</span></span> - <span class="text-danger">You</span> <span class="text-primary">have</span> <span class="text-success">26 books</span>.
                 </li>
 
@@ -107,12 +107,12 @@
             </p>
 
                 <ul class="fs-3">
-                    <li>څنګه؟ - How?</li>
-                    <li>څوک؟ - Who?</li>
-                    <li>څه؟ - What?</li>
-                    <li>ولې؟ - Why?</li>
-                    <li>چېرته؟ - Where?</li>
-                    <li>کله؟ - When?</li>
+                    <li><span class="text-pashto">څنګه؟</span> - How?</li>
+                    <li><span class="text-pashto">څوک؟</span> - Who?</li>
+                    <li><span class="text-pashto">څه؟</span> - What?</li>
+                    <li><span class="text-pashto">ولې؟</span> - Why?</li>
+                    <li><span class="text-pashto">چېرته؟</span> - Where?</li>
+                    <li><span class="text-pashto">کله؟</span> - When؟</li>
                 </ul>
 
                 <p>Generally, the following rules apply when forming interrogative sentences in Pashto:</p>
