--- a/pashto/lessons/forming-sentences/index.html
+++ b/pashto/lessons/forming-sentences/index.html
@@ -71,7 +71,7 @@
                 familiar SVO (subject-verb-object) structure that English uses.
             </p>
 
-            <h2>Examples</h2>
+            <h3>Examples</h3>
 
             <p>Below is the color code that I used.</p>
 
@@ -106,22 +106,30 @@
                 Here are some common question words in Pashto:
             </p>
 
-                <ul class="fs-3">
-                    <li><span class="text-pashto">څنګه؟</span> - How?</li>
-                    <li><span class="text-pashto">څوک؟</span> - Who?</li>
-                    <li><span class="text-pashto">څه؟</span> - What?</li>
-                    <li><span class="text-pashto">ولې؟</span> - Why?</li>
-                    <li><span class="text-pashto">چېرته؟</span> - Where?</li>
-                    <li><span class="text-pashto">کله؟</span> - When؟</li>
-                </ul>
+            <ul class="fs-3">
+                <li><span class="text-pashto">څنګه؟</span> - How?</li>
+                <li><span class="text-pashto">څوک؟</span> - Who?</li>
+                <li><span class="text-pashto">څه؟</span> - What?</li>
+                <li><span class="text-pashto">ولې؟</span> - Why?</li>
+                <li><span class="text-pashto">چېرته؟</span> - Where?</li>
+                <li><span class="text-pashto">کله؟</span> - When?</li>
+            </ul>
 
-                <p>Generally, the following rules apply when forming interrogative sentences in Pashto:</p>
+            <p>Generally, the following rules apply when forming interrogative sentences in Pashto:</p>
 
-                <ul>
-                    <li>If there is a subject, put it first before other words. The question word will follow the subject.</li>
-                    <li>If the subject is the question word itself, it should still be first in the sentence.</li>
-                    <li>If the subject is omitted, the question word will be first.</li>
-                </ul>
+            <ul>
+                <li>If there is a subject, put it first before other words. The question word will follow the subject.</li>
+                <li>If the subject is the question word itself, it should still be first in the sentence.</li>
+                <li>If the subject is omitted, the question word will be first.</li>
+            </ul>
+
+            <h3>Examples (Subject First, Question Word After)</h3>
+
+            <ul class="fs-3">
+                <li>؟
+                    <span class="text-pashto"><span class="text-danger">تا</span>ولې <span class="text-success">کتاب</span> <span class="text-primary">ولیدلو</span>؟</span> - Why did you see the book?
+                </li>
+            </ul>
 
         </div>
         
