--- a/pashto/lessons/forming-sentences/index.html
+++ b/pashto/lessons/forming-sentences/index.html
@@ -127,7 +127,7 @@
 
             <ul class="fs-3">
                 <li>؟
-                    <span class="text-pashto"><span class="text-danger">تا</span>ولې <span class="text-success">کتاب</span> <span class="text-primary">ولیدلو</span>؟</span> - Why did you see the book?
+                    <span class="text-pashto"><span class="text-danger">تا</span> ولې <span class="text-success">کتاب</span> <span class="text-primary">ولیدلو</span></span> - Why did you see the book?
                 </li>
             </ul>
 
