--- a/pashto/lessons/forming-sentences/index.html
+++ b/pashto/lessons/forming-sentences/index.html
@@ -84,11 +84,11 @@
             <ul class="fs-3">
 
                 <li>
-                    <span class="text-pashto"><span class="text-danger">زه</span> <span class="text-success">اوبه</span> <span class="text-primary">څښم</span>.</span> - <span class="text-danger">I</span> <span class="text-primary">drink</span> <span class="text-success">water</span>.
+                    <span class="text-pashto"><span class="text-danger">زه</span> <span class="text-success">اوبه</span> <span class="text-primary">څښم</span></span>. - <span class="text-danger">I</span> <span class="text-primary">drink</span> <span class="text-success">water</span>.
                 </li>
 
                 <li>
-                    <span class="text-pashto"><span class="text-danger">ته</span> <span class="text-success">۲۶ کتابونه</span> <span class="text-primary">لرې</span>.</span> - <span class="text-danger">You</span> <span class="text-primary">have</span> <span class="text-success">26 books</span>.
+                    <span class="text-pashto"><span class="text-danger">ته</span> <span class="text-success">۲۶ کتابونه</span> <span class="text-primary">لرې</span></span>. - <span class="text-danger">You</span> <span class="text-primary">have</span> <span class="text-success">26 books</span>.
                 </li>
 
             </ul>
