Fix typo (SVO -> SOV)

--- a/pashto/lessons/forming-sentences/index.html
+++ b/pashto/lessons/forming-sentences/index.html
@@ -96,7 +96,7 @@
             <h2>Wait, This Doesn't Look Familiar!</h2>
 
             <p>Don't worry! These examples were only meant to introduce you to the basic sentence structure of Pashto.
-                You will learn more of these vocabulary words later on. For now, just recognize the SVO structure and
+                You will learn more of these vocabulary words later on. For now, just recognize the SOV structure and
                 how the words work together in the above sentences to make that structure work.
             </p>
 
