Add more example interrogative sentences

--- a/pashto/lessons/forming-sentences/index.html
+++ b/pashto/lessons/forming-sentences/index.html
@@ -131,6 +131,14 @@
                     <span class="text-pashto"><span class="text-danger">تا</span> ولې <span class="text-success">کتاب</span> <span class="text-primary">ولیدلو</span>؟</span> - Why did you see the book?
                 </li>
 
+                <li>
+                    <span class="text-pashto"><span class="text-danger">هغه</span> چېرته <span class="text-primary">وه</span>؟</span> - Where was she?
+                </li>
+
+                <li>
+                    <span class="text-pashto"><span class="text-danger">تا</span> څه <span class="text-primary">کول</span>؟</span> - What were you doing?
+                </li>
+
             </ul>
 
         </div>
