--- a/pashto/lessons/forming-sentences/index.html
+++ b/pashto/lessons/forming-sentences/index.html
@@ -128,15 +128,15 @@
             <ul class="fs-3">
 
                 <li>
-                    <span class="text-pashto"><span class="text-danger">تا</span> ولې <span class="text-success">کتاب</span> <span class="text-primary">ولیدلو</span>؟</span> - Why did you see the book?
+                    <span class="text-pashto"><span class="text-danger">تا</span> ولې <span class="text-success">کتاب</span> <span class="text-primary">ولیدلو</span>؟</span> - Why did <span class="text-danger">you</span> <span class="text-primary">see</span> <span class="text-success">the book</span>?
                 </li>
 
                 <li>
-                    <span class="text-pashto"><span class="text-danger">هغه</span> چېرته <span class="text-primary">وه</span>؟</span> - Where was she?
+                    <span class="text-pashto"><span class="text-danger">هغه</span> چېرته <span class="text-primary">وه</span>؟</span> - Where <span class="text-primary">was</span> <span class="text-danger">she</span>?
                 </li>
 
                 <li>
-                    <span class="text-pashto"><span class="text-danger">تا</span> څه <span class="text-primary">کول</span>؟</span> - What were you doing?
+                    <span class="text-pashto"><span class="text-danger">تا</span> څه <span class="text-primary">کول</span>؟</span> - What were <span class="text-danger">you</span> <span class="text-primary">doing</span>?
                 </li>
 
             </ul>
