Add examples on interrogative sentences without subjects

--- a/pashto/lessons/forming-sentences/index.html
+++ b/pashto/lessons/forming-sentences/index.html
@@ -141,6 +141,18 @@
 
             </ul>
 
+            <h3>Examples (No Subject, Question Word First)</h3>
+
+            <ul class="fs-3">
+
+                <li>
+                    <span class="text-pashto">څه <span class="text-primary">کوې</span>؟</span> - What are you <span class="text-primary">doing</span>? / What do you <span class="text-primary">do</span>?
+                </li>
+
+                <li>
+                    <span class="text-pashto">کله <span class="text-primary">ځي</span>؟</span> - When is he/she/it <span class="text-primary">coming</span>? / When does he/she/it <span class="text-primary">come</span>?
+                </li>
+
         </div>
         
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
